--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,7 +2,7 @@
 
 {% block content_block %}
   {% if registered %}
-    <h1>Thank you for registering. Please go to your email to verify your account.</h1>
+    <h1>Thank you for registering. Please go to your email to confirm your account.</h1>
   {% else %}
     <h1>Register Here!</h1>
     <h3>Fill out the form: </h3>
